[package]
name = "cargo-casper"
version = "2.1.1"
authors = ["Fraser Hutchison <fraser@casperlabs.io>"]
edition = "2021"
description = "A command line tool for creating a Wasm smart contract and tests for use on the Casper network."
documentation = "https://docs.rs/cargo-casper"
readme = "README.md"
homepage = "https://casperlabs.io"
repository = "https://github.com/casper-ecosystem/cargo-casper"
license = "Apache-2.0"
include = ["src/*.rs", "Cargo.lock", "Cargo.toml", "resources/*"]

[dependencies]
clap = { version = "=4.3.24", features = ["cargo", "deprecated", "wrap_help"] }
colour = "0.7.0"
once_cell = "1.18.0"

[dev-dependencies]
assert_cmd = "2.0.12"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde_json = "1.0.108"
tempfile = "3.8.1"
